syntax = "proto3";

option go_package = "github.com/zachmandeville/tester-prototype/test-target/test-target";

package testtarget;

message ComplimentRequest {
  string name  = 1;
}

message ComplimentResponse {
  string compliment = 1;
}

message ClusterRequest {
  string cluster = 1;
}

message ClusterResponse {
  string message = 1;
  string snapshot = 2;
}

service Shim {
  rpc GiveCompliment(ComplimentRequest) returns (ComplimentResponse){}
  rpc AddCluster(ClusterRequest) returns (ClusterResponse){}
}
